# LCIM-BitTheorium

./: .gitignore  Full.h  main.cpp  numa-cuda-hybrid.cpp
DOCS/: ACIMWORKERRINGFULL.odt  CHERI-IDEA.odt  ProjPlan.odt  ThreadPool.odt  drailh.odt
core/: CMakeLists.txt  CmakeLists.txt  main.cpp  relbittest.cpp  relbittest.h
core/headers/: ACSThreadManager.h  APCCpuWorker.hpp  AllocNW.hpp  AtomicCSCompact.h  AtomicCimSys.h  AtomicDataSignalArray.hpp  AtomicPCArray.hpp  MPMCQueue.hpp  PackedCell.hpp  PackedStRel.h  threadpool.h  wakethread.hpp
core/programes/: ACSThreadManager.cpp  AtomicCSCompact.cpp  AtomicCimSys.cpp
core/programs/: AtomicCSCompact.cpp  BitPacker.tpp
